--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "ampersand-app": "^1.0.4",
+    "ampersand-router": "^3.0.2",
     "autoprefixer-core": "^5.2.0",
     "babel": "^5.5.8",
     "babel-core": "^5.5.8",
@@ -20,6 +21,7 @@
     "css-loader": "^0.14.5",
     "file-loader": "^0.8.4",
     "hjs-webpack": "^2.5.0",
+    "hoek": "^2.14.0",
     "json-loader": "^0.5.2",
     "node-libs-browser": "^0.5.2",
     "postcss-loader": "^0.4.4",
