--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "brians-workshops",
   "version": "1.0.0",
-  "description": "",
+  "description": "React.js remake of Brianfit/WorkshopInABox",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:gyaresu/brians-workshops.git"
+  },
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack",
@@ -19,6 +23,7 @@
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "css-loader": "^0.14.5",
+    "edit-google-spreadsheet": "^0.2.19",
     "file-loader": "^0.8.4",
     "hjs-webpack": "^2.5.0",
     "hoek": "^2.14.0",
