--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hjs-webpack": "^2.5.0",
     "hoek": "^2.14.0",
     "json-loader": "^0.5.2",
+    "local-links": "^1.4.0",
     "node-libs-browser": "^0.5.2",
     "postcss-loader": "^0.4.4",
     "react": "^0.13.3",
