--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "css-loader": "^0.14.5",
-    "edit-google-spreadsheet": "^0.2.19",
     "file-loader": "^0.8.4",
+    "google-spreadsheet": "^0.3.1",
     "hjs-webpack": "^2.5.0",
     "hoek": "^2.14.0",
     "json-loader": "^0.5.2",
@@ -33,6 +33,7 @@
     "postcss-loader": "^0.4.4",
     "react": "^0.13.3",
     "react-hot-loader": "^1.2.7",
+    "request": "^2.58.0",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.1",
     "surge": "^0.14.2",
